# fp-collections-rs

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  generate-coverage.sh  install.sh
examples/: list.rs  set.rs
src/: helpers.rs  lib.rs  list.rs  set.rs
tests/: helpers.rs  list.rs  set.rs
