[package]
name = "fp-collections"
version = "0.0.1"
description = "An alternate collections library for rust"
authors = ["Akshay Nair <phenax5@gmail.com>", "Melwyn Saldanha <melwyn95@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["collections", "collection", "list", "linked", "set", "ocaml"]
repository = "https://github.com/phenax/collections"
readme = "README.md"

# Add scripts (Install cargo-cmd: cargo install cargo-cmd)
[package.metadata.commands]
lint = "cargo clippy && cargo fmt -- --check"
fix = "cargo clippy && cargo fmt"
cov = "cargo test && cargo cmd coverage"
coverage = "bash .github/workflows/generate-coverage.sh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
